# rust-dmd

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  claude.md  demo.R  generate_plots.R
.github/workflows/: ci.yml
docs/: analysis.html  api-python.html  api-r.html  api-rust.html  core-dmd.html  examples-python.html  examples-r.html  extended-dmd.html  getting-started.html  gla.html  hankel-dmd.html  harmonic.html  index.html  maps.html
docs/css/: style.css
docs/js/: main.js
koopman-dmd/: Cargo.toml
koopman-dmd-py/: Cargo.toml  pyproject.toml
koopman-dmd-py/src/: lib.rs
koopman-dmd-py/tests/: test_koopman_dmd.py
koopman-dmd-r/: DESCRIPTION  NAMESPACE
koopman-dmd-r/R/: dmd.R  extendr-wrappers.R  gla.R  hankel.R  harmonic.R  maps.R
koopman-dmd-r/src/: .gitignore  Makevars  Makevars.win  entrypoint.c
koopman-dmd-r/src/rust/: Cargo.toml
koopman-dmd-r/src/rust/src/: lib.rs
koopman-dmd-r/tests/: testthat.R
koopman-dmd-r/tests/testthat/: test-dmd.R  test-gla.R  test-hankel.R  test-harmonic.R  test-integration.R  test-maps.R
koopman-dmd/benches/: dmd_bench.rs
koopman-dmd/examples/: basic_dmd.rs  phase_space.rs
koopman-dmd/src/: analysis.rs  dmd.rs  gla.rs  hankel.rs  harmonic.rs  lib.rs  lifting.rs  maps.rs  mesochronic.rs  predict.rs  types.rs  utils.rs
koopman-dmd/tests/: cross_validation.py  edge_cases.rs
