[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "koopman-dmd"
version = "0.1.0"
description = "Dynamic Mode Decomposition with Koopman operator theory"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[tool.maturin]
features = ["pyo3/extension-module"]
