[package]
name = "koopman-dmd"
version = "0.1.0"
edition = "2021"
description = "Dynamic Mode Decomposition with Koopman operator theory"
license = "MIT"
repository = "https://github.com/jimeharrisjr/rust-dmd"
keywords = ["dmd", "koopman", "dynamical-systems", "spectral-analysis"]
categories = ["science", "mathematics"]

[dependencies]
faer = "0.22"
num-complex = "0.4"
num-traits = "0.2"
rayon = "1.10"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"

[[bench]]
name = "dmd_bench"
harness = false
